# gslODEPlugin

./: .gitignore  CMakeLists.txt  README.md  lib_multi_test.csv  out.csv  out_multi.csv  pars_lor_test.csv  pars_multi_test.csv  pars_nar_test.csv  vars_multi_test.csv
.github/workflows/: cmake-multi-platform.yml
gsl/: _README  config.h  gsl.pro  gsl_errno.h  gsl_math.h  gsl_minmax.h  gsl_pow_int.h  gsl_precision.h  gsl_version.h  templates_on.h
gsl/blas/: blas.c  gsl_blas.h  gsl_blas_types.h
gsl/block/: gsl_block.h  gsl_block_double.h  gsl_check_range.h  init.c  init_source.inc
gsl/cblas/: daxpy.c  ddot.c  dgemv.c  dnrm2.c  dtrmv.c  dtrsv.c  error_cblas_l2.h  gsl_cblas.h  xerbla.c
gsl/cdf/: beta_inc.inc  gauss.c  gaussinv.c  gsl_cdf.h  tdist.c
gsl/complex/: gsl_complex_math.h  inline.c  math.c
gsl/err/: error.c  gsl_message.h  message.c  stream.c  strerror.c
gsl/interpolation/: accel.c  akima.c  bicubic.c  bilinear.c  cspline.c  gsl_interp.h  gsl_interp2d.h  gsl_spline.h  gsl_spline2d.h  inline.c  interp.c  interp2d.c  linear.c  spline.c  spline2d.c
gsl/linalg/: cholesky.c  gsl_linalg.h  lu.c  tridiag.c
gsl/matrix/: copy.c  copy_source.inc  gsl_matrix.h  gsl_matrix_double.h  init.c  init_source.inc  matrix.c  rowcol.c  submatrix.c  submatrix_source.inc  swap.c  swap_source.inc
gsl/ode-initval2/: bsimp.c  control.c  control_utils.c  cscal.c  cstd.c  driver.c  evolve.c  gsl_odeiv2.h  modnewton1.c  msadams.c  msbdf.c  rk1imp.c  rk2.c  rk2imp.c  rk4.c  rk4imp.c  rk8pd.c  rkck.c  rkf45.c  rksubs.c  step.c  step_utils.c
gsl/permutation/: gsl_permutation.h  gsl_permute.h  gsl_permute_double.h  gsl_permute_matrix.h  gsl_permute_matrix_double.h  gsl_permute_vector.h  gsl_permute_vector_double.h  init.c  permutation.c  permute.c  permute_source.inc
gsl/randist/: beta.c  binomial_tpe.c  cauchy.c  chisq.c  dirichlet.c  discrete.c  exponential.c  fdist.c  gamma.c  gauss.c  gausszig.c  geometric.c  gsl_randist.h  laplace.c  lognormal.c  multinomial.c  mvgauss.c  nbinomial.c  poisson.c  shuffle.c  tdist.c  weibull.c
gsl/rng/: gsl_rng.h  inline.c  mt.c  rng.c  taus.c
gsl/specfunc/: beta.c  elementary.c  erfc.c  exp.c  expint.c  gamma.c  gamma_inc.c  gsl_sf_elementary.h  gsl_sf_erf.h  gsl_sf_exp.h  gsl_sf_expint.h  gsl_sf_gamma.h  gsl_sf_log.h  gsl_sf_pow_int.h  gsl_sf_psi.h  gsl_sf_trig.h  gsl_sf_zeta.h  log.c  pow_int.c  psi.c  trig.c  zeta.c
gsl/sys/: coerce.c  fdiv.c  infnan.c  minmax.c  pow_int.c
gsl/vector/: copy.c  gsl_vector.h  gsl_vector_double.h  init.c  init_source.inc  oper.c  vector.c  view.c  view_source.inc
include/: ODESystem.h  ODESystemLoader.h  SharedLibrary.h  ode_api.h  rapidcsv.h  version.h.in
src/: ODESystem.cpp  lorenz.cpp  main.cpp  nar.cpp  test_lib.cpp
